--- a/index.html
+++ b/index.html
@@ -4,31 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Bug Runner</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
-
 <body>
 
-  <header id="topbar">
-    <span>🐞 Bug-Runner</span>
-    <span>Tap / Space</span>
-  </header>
+<header id="topbar">
+  <span>🐞 Bug-Runner</span>
+  <span>Tap / Space</span>
+</header>
 
-  <main id="game">
-    <div id="score">Score: 0</div>
-    <div id="player"></div>
-  </main>
+<main id="game">
+  <div id="score">Score: 0</div>
+  <div id="player"></div>
+</main>
 
-  <section id="game-over" class="hidden">
-    <h1>💥 Bug Found</h1>
-    <p>You pushed to prod.</p>
-    <button onclick="restart()">Restart</button>
-  </section>
+<section id="game-over" class="hidden">
+  <h1>💥 Bug Found</h1>
+  <p>You pushed to prod.</p>
+  <button onclick="restart()">Restart</button>
+</section>
 
-  <footer id="footer">
-    Open-source · GitHub Pages
-  </footer>
+<footer id="footer">
+  Open-source · GitHub Pages
+</footer>
 
-  <script src="game.js"></script>
+<script src="./game.js"></script>
 </body>
 </html>
