--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <section id="game-over" class="hidden">
   <h1>💥 Bug Found</h1>
-  <p>You pushed to prod.</p>
+  <p>You shipped to production.</p>
   <button onclick="restart()">Restart</button>
 </section>
 
